--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -8,6 +8,6 @@
     </header>
     <footer style="position: absolute; bottom: 0px; background-color: #00FF00;
 height: 60px; width: 100%;">
-      <p style="text-align: centeruuu;">Best School</p>
+      <p style="text-align: center;">Best School</p>
     </footer>
 </html>
