update on task 4

--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -10,12 +10,13 @@
   </head>
   <body>
     <header>
+      <div class ="logo"></div>
     </header>
 
     <div class="container">
 	    <section class="filters">
 		    <button>Search</button>
-            </section>
+      </section>
     </div>
 
     <footer>
